# openai-ox

./: Cargo.toml  flake.nix
src/: embeddings.rs  lib.rs  models.rs  tokenizer.rs
src/audio/: mod.rs  speech.rs  transcription.rs
src/chat/: message.rs  mod.rs
