[package]
name = "openai-ox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:cfg-if", "dep:derivative", "dep:leaky-bucket"]
tools = ["ai-tools-ox"]

[dependencies]
ai-tools-ox = { git = "https://github.com/ribelo/ai-tools-ox", optional = true }
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls",
  "stream",
  "multipart",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
cfg-if = { version = "1.0.0", optional = true }
derivative = { version = "2.2.0", optional = true }
leaky-bucket = { version = "1.0.1", optional = true }
async-trait = "0.1.72"
tiktoken-rs = "0.5.8"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
reqwest-eventsource = "0.5.0"
async-convert = "1.0.0"
