[package]
name = "openai-ox"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
leaky-bucket = { version = "1.0.1", optional = true }
async-trait = "0.1"
tokio = { version = "1.39", features = ["rt", "macros"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
bon = "3.3.0"
derive_more = {version = "1.0.0", features = ["display", "deref", "deref_mut", "into", "into_iterator"]}
